lab1/Test/L1-A-6-7.output
Error Type B at Line 5
Error Type B at Line 6
Error Type B at Line 41
Error Type B at Line 44
Error Type B at Line 44
Error Type A at Line 45
