lab1/Test/L1-A-6-7.cmm
struct Gy680E7 {
}vi5iNFKdax3 ( ) {
  float Hg82Z4VSqEJ9akFD1 [ 2130075709 ] = JsGM ( 
    ) [ - - D = i13wU1TIOIF ] [ dr = n_6iNsCgkVeLS ] = 
    - ! GaB9kwolEy9V0A1Wl = , O_b6 ;
.   if ( 1245668770 * - DFJR [ aEuAleH_aBmJvp ] + 
    - ! szL6dBzr8XeUSzL1 * s5v2mZv87C_VjSIU + ! - HT3XLgM7mZVRbR2Fo 
    / GLhtEE * nS6 * lfPMc91p_zgoYFn8 != ! ! aX * Vsn1H3zBB8lTtMGD 
    / Il3FV0tK7 / sD_mze / i3IM == - ( pK7Y_jQBAu ) - 
    pc0ZTVF4 - Wr1HfQqm3MtR1g6E - ZsNaTx9o9T4TlnXe + aKYA0ZWiqwh 
    == ! - oDV8IPWRVFve * extdwsBNbK / OYf3YliTPvCmr * 
    LnmoJbaArWkuR5E / XI * Pp7 - Xs + CyrEvvZX1sVXd7Xl 
    + a3sWDgKT9U9AaW <= ! - jKB9exBHFa4 / csQMY0p5krDq 
    * aKgJmFDU0mOG5EDiMyvm > ! - hyT6SW_8pi5mNUdGmu3G 
    * wlzCX / dAu >= ! ! bOB39Xzuf5tDu99F - jSHn13yOBJ4Lyt 
    - ktKycrTxyIvsG == ! Pqj_ ( ) . ch_76aPi5Ti_lzl [ 
    QiJt0W ] . lN_lSl7fc4DryOk9EOS * TETU9W973S * O9cCRewXA19yoFm 
    / ZKh3Idq8kVsJ + MkPHSe3hwIn9xG + R8zDgEtB - pQ1s_uP32 
    - TNZ9fHhICzA == YlDxeJuwhcoG ( M ) + eUkF5 + hCXpm4g7uLV1zi3zpI 
    + j - UFYK0AdchPKC6WGbok == - ! ZMpoX - EauMckyNEoUOKvtnghDP 
    - IQl > de2XMw0hjyMQOWYpLtvl ( aI_ ) * m1FgL1Hg * 
    lkyOVqzoB1IGgH_IHJp * DxEWzBH / hDwfo9vE9UUQ - Gfeb9YV5tfe_K 
    + IR_3YQqqcApQ4 + aGCA1yas5VU6GulIHY + x_xCx + UzIT 
    + zYKswBVy8NAIVEcYNrc + TeKidHflopMADm3qJeB4 + D1D 
    - rDmqNFYwlnyV4Qa == ! - G < kUsswfJNUD ( ) - t185RjYpvDekv 
    >= - - I0u4wqSM_ttP4 + YRukyK1l2IoR + pRXEvSKG8YsKLS0 
    - yArefofIhSqSYuTdZ + feaqFNNzzjsP7fnrq < U ( R_YJwlLwJORrQ7c 
    ) * XrYY7OrVExAkCNz / MuIAdayd < 870314728.903286326 
    * x6fXR2DZ1i * o8c / Gi9P229KJz75Gri32p < I1y8L ( 
    KMjO1p ) . h4AlaV3xTSCyzj + Fqsi1DO4 <= aDmAWeqgfxTx8ZhRUS8 
    ( P9aoNlGd ) - jiVT5 - piQnrDdPz9sv20vdj - JGDg_4Ll9d 
    + G4Jbnu < ! - Q0x * WE0BP / Yb63fsYsfmpnMtD > e3fObFwlp20hG 
    ( ) [ K1Ogy3oYB9j ] / sDaAkATmXIQ2QI + OlfHqHqkCJV 
    - HtRBvex_Gfk2q < ! ! i5tN8D / Zl3yWl3 == - m_EKUdkXZdFKnKex8 
    ( ) != NNeV3VYmfGkADgX15DK ( ) / C0RTikVEkOhD > ! 
    - frkjtQdvxV9 - ra5O <= - - q6zkCbI5eSSPbp9bD4ws >= 
    ! ! I1AmWfG * _uK / HX1DGNxEd / buJkYVURNtNF16Swin0H 
    * JFzTA04NfUX6 != - ! h1qQ2xiyEmK33L82L <= ! f3s9oo 
    / tFGjdoCS * Xx9G4fw66pat0Q9Mz * lJTtR1Q - k0b33exNSSYUJD 
    + EhjxPiSed + A - x6GGfPEYdcEUOvle3S9 + Eq5H3iH + 
    r9TyLRRN2DBJH7J - mpcfn47l - x_CN6 + + QNghWUTOC84 
    - YYEtT > ! JAatxdUvqTB ( ) . g_72FmsuojPM4 * vAVgRxUVc6cCan9f 
    + EMSrA >= nmHhPYWL ( ) [ hsS0kXDGy3WtMOeQp ] )   if 
     ( pS4fPwOBs4V2YgOpWZ2 )   _nOyqMjMFMg3jD struct ;
else   if ( @JCz9EJZ6twN3wW )   GNwDkSd8Wv5FHzIyN 
    ;



}
